[package]
name = "songmi-send-key-4-bob-use"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
aes-gcm = "0.10"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde", "clock"] }
once_cell = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
